Release history for multipass

v17.03.11  2017-03-11
  [Fixed]
  - Compatibility with reparenting window managers has been improved.
    multipass has been tested with katriawm, Openbox, i3 and
    Compiz (Unity on Ubuntu 16.04).
  - Flickering has been reduced.

  [Changed]
  - It is no longer possible to end selection mode by left-clicking in
    multipass's window. You must issue a right-click anywhere on the
    screen.
  - Window IDs are now shown as hex since virtually all other tools do
    this as well.

v17.03  2017-03-05
  - Initial release.
  - Broadcast key events to multiple windows.